# kestrel

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  camera.h  camera_8h.html  camera_8h__dep__incl.map  camera_8h__dep__incl.md5  camera_8h__incl.map  camera_8h__incl.md5  camera_8h_source.html  classCamera-members.html  classCamera.html  classConductor-members.html  classConductor.html  classConductor__coll__graph.map  classConductor__inherit__graph.md5  classLambertian-members.html  classLambertian.html  classLambertian__coll__graph.map  classLambertian__inherit__graph.md5  classLight-members.html  classLight.html  classLight__coll__graph.map  classLight__coll__graph.md5  classMaterial-members.html  classMaterial.html  classMaterial__inherit__graph.map  classMaterial__inherit__graph.md5  classPCG32-members.html  classPCG32.html  classPlyMesh-members.html  classPlyMesh.html  classRay-members.html  classRay.html  classRay__coll__graph.map  classRay__coll__graph.md5  classScene-members.html  classScene.html  (+112 more)
.github/workflows/: ci.yml
data/: scene.xml
data/meshes/: cube.ply  lowpoly.ply
include/: camera.h  kestrel.h  light.h  pcg32.h  plymesh.h  ray.h  scene.h  shape.h  sphere.h  triangle.h  vec3.h
include/bsdfs/: conductor.h  lambertian.h  material.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  files_0.js  files_2.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+19 more)
src/: camera.cpp  kestrel.cpp  light.cpp  light.h  logger.cpp  logger.h  parser.cpp  plymesh.cpp  ray.cpp  scene.cpp  scene.h  sphere.cpp  sphere.h  triangle.cpp  vec3.cpp  vec3.h
src/bsdfs/: conductor.cpp  conductor.h  lambertian.cpp  lambertian.h
